# ips-cell

./: .project  Makefile.am  README.md  configure.ac  setup.py
common/lib/ips/: __init__.py  flags.py  handlers.py  sandbox.py  sandbox_service.py  server.py  tools.py  utils.py  variable_factory.py  zeroconf.py
common/lib/ips/mon/: __init__.py
common/proto/ips/proto/: __init__.py  manager.proto  sandbox.proto  variables.proto
debian/: README.source  changelog  control  copyright  ips-cell.default  ips-cell.dirs  ips-cell.install  ips-cell.links  ips-cell.upstart  ips-client.install  ips-common.install  ips-manager.install  ips-manager.upstart  ips-mon-scraped.default  ips-mon-scraped.dirs  ips-mon-scraped.install  ips-mon-scraped.upstart  varzd.default  varzd.upstart
examples/: Makefile.am  Makefile.in  archive2deb.py  createFromArchive.sh  createSandbox.sh  deploy-ips-in-maas-nodes.sh  deploy-varz-server-in-sandbox.py  getSandboxes.sh  housekeep.py  iptables.sh  recreateSandboxWithDeb.sh  sendEventToAll.sh  startSandbox.sh  updateSandbox.sh
servers/cell/: ips-cell-server  lxc-ips-archive
servers/manager/: ips-manager
servers/mon/: ips-mon-scraped
servers/varzd/: varzd
tests/: test.sh
tests/ips_test/: __init__.py  handlers_test.py  sandbox_test.py  variable_factory_test.py
tools/: ips-rpc-client  ips-update-manager
