EXTRA_DIST = \
    archive2deb.py \
    createFromArchive.sh \
    createSandbox.sh \
    deploy-ips-in-maas-nodes.sh \
    deploy-varz-server-in-sandbox.py \
    getSandboxes.sh \
    housekeep.py \
    iptables.sh \
    recreateSandboxWithDeb.sh \
    sendEventToAll.sh \
    startSandbox.sh \
    updateSandbox.sh
